# medicat-assistant-bot

./: .gitignore  brain_data.pkl  chatbot.db  main.py  package-lock.json  pyproject.toml  readme.md  requirements.txt.old  terminal_main.py  test_output.txt  test_output_debug.txt  test_output_final.txt
chroma_db/: chroma.sqlite3
data/: guide.txt  notes.txt
docs/: PROJECT_DOCUMENTATION.md  PROJECT_LOG_JAN19.md  PROJECT_LOG_JAN19.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: legacy_gradio_main.py
src/: api.py  config.py  utils.py
src/agents/: medical_agent.py  medical_prompt.py  prescription_agent.py  (+1 more)
static/: script.js  style.css
templates/: index.html
test_chroma_db_storage/: chroma.sqlite3
tests/: check_import.py  debug_failing_cases.py  debug_gradio.py  debug_imports.py  debug_output.txt  debug_st.py  debug_weather.py  diagnose_search.py  download_frpc.py  error_log.txt  final_test_output.txt  history_test_output.txt  inspect_api.py  probe_stream.py  repro_agent.py  repro_context.py  repro_date_hallucination.py  repro_hallucination.py  repro_heart_attack.py  repro_known_unknowns.py  repro_llm.py  reproduce_issue.py  stress_test.py  stress_test_v2.py  stress_test_v2_failing.py  stress_test_v3.py  test_api.py  test_bleeding_fix.py  test_broken_history.py  test_chroma_db.py  test_comprehensive.py  test_database.py  test_deployment.py  test_efficiency.py  test_features.py  test_followup.py  test_freshness.py  test_gradio_interaction.py  test_gradio_share.py  test_imports.py  (+24 more)
(+21 files in other folders)
